# CppNote

./: .gitignore  .nojekyll  CMakeLists.txt  Makefile  README.md  _quarto.yml  catppuccin-latte.theme  catppuccin-macchiato.theme  index.html  index.md  robots.txt  search.json  sitemap.xml  styles.css  theme-dark.scss  theme.scss
.github/workflows/: publish.yml
docs/classes/: basics.html  basics.md  constructors.html  constructors.md  copy-move.html  copy-move.md  destructors.html  destructors.md  index.html  index.md  inheritance.html  inheritance.md  object-layout.html  object-layout.md  operators.html  operators.md  raii.html  raii.md  virtual.html  virtual.md
docs/compilation/: index.html  index.md  inline.html  inline.md  linkage.html  linkage.md  translation-units.html  translation-units.md
docs/concurrency/: async.html  async.md  atomic.html  atomic.md  condition-variable.html  condition-variable.md  future-promise.html  future-promise.md  index.html  index.md  mutex.html  mutex.md  threads.html  threads.md
docs/core/: attributes.html  attributes.md  bitfields.html  bitfields.md  const.html  const.md  constexpr.html  constexpr.md  enums.html  enums.md  functions.html  functions.md  index.html  index.md  initialization.html  initialization.md  lambdas.html  lambdas.md  namespaces.html  namespaces.md  preprocessor.html  preprocessor.md  structs.html  structs.md  types.html  types.md  (+4 more)
src/: CMakeLists.txt  fmt_usage.cpp
src/linkage/: CMakeLists.txt  lib-inl.hpp  lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt  basic_test.cpp  script.sh  test.cpp
(+123 files in other folders)
