add_library(lib)
target_sources(lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib.cpp)
target_link_libraries(lib PRIVATE fmt::fmt)
target_link_libraries(lib PRIVATE compile_flags_interface)

add_executable(demo)
target_sources(demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
target_link_libraries(demo PRIVATE lib)
target_link_libraries(demo PRIVATE fmt::fmt)
target_link_libraries(demo PRIVATE compile_flags_interface)